# Test_gRPC

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
proto/: commands.txt  test.grpc.pb.cc  test.grpc.pb.h  test.pb.cc  test.pb.h  test.proto
src/: test_async_client.cpp  test_client.cpp  test_server.cpp  tests_async_server.cpp
